# my_chat

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  initial_setup.sh  nginx.conf  pyproject.toml  requirements.txt
app/: config.py  database.py  exceptions.py  main.py
app/celery/: celery_app.py  celeryconfig.py  tasks.py
app/chat/: dao.py  models.py  router.py
app/dao/: base.py
app/migration/: env.py
app/migration/versions/: 0137f9fcb5b8_sent_notify_for_user.py  4afa5c6cfff5_create_telegram_users_table.py  4e5db0c934ee_initial_migration.py  5a6e75e2607a_create_telegram_users_table.py  8e5eef089fd9_initial_revision.py
app/redis/: redis_client.py
app/static/js/: chat.js
app/static/styles/: chat.css
app/telegram/: bot.py  dao.py  models.py  schemas.py
app/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
