[tool.poetry]
name = "my-chat"
version = "0.1.0"
description = ""
authors = ["GrigoriyKruchinin <gkruchinin75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
pydantic = {extras = ["email"], version = "^2.9.2"}
bcrypt = "^4.2.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
websockets = "^13.1"
aiosqlite = "^0.20.0"
pydantic-settings = "^2.6.0"
jinja2 = "^3.1.4"
asyncpg = "^0.29.0"
aiogram = "^3.13.1"
celery = "^5.4.0"
aiokafka = "^0.11.0"
redis = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
